[gd_scene load_steps=29 format=3 uid="uid://btxq5m71isxqb"]

[ext_resource type="Shader" path="res://Assets/darkmod.gdshader" id="1_mfcgb"]
[ext_resource type="Script" path="res://Scripts/levels/level_template.gd" id="2_wyvwr"]
[ext_resource type="Texture2D" uid="uid://cq4vfgqvc5hu5" path="res://Assets/Env/bricks.png" id="3_qdkmt"]
[ext_resource type="Texture2D" uid="uid://dtutuxuo4vmfc" path="res://Assets/Env/floor.png" id="4_s0ne8"]
[ext_resource type="Texture2D" uid="uid://yoiyjvjk3e1i" path="res://Assets/Env/bars.png" id="5_2yht7"]
[ext_resource type="Texture2D" uid="uid://l6sng07qs3t1" path="res://Assets/Env/spikes.png" id="6_rcq1a"]
[ext_resource type="Texture2D" uid="uid://b4cg4pirs5osq" path="res://Assets/Env/poison.png" id="7_naw7y"]
[ext_resource type="PackedScene" uid="uid://dmptryebkslsh" path="res://Scenes/envm/portal_back.tscn" id="8_kudv0"]
[ext_resource type="PackedScene" uid="uid://ducgrspg4c2fe" path="res://Scenes/chars/player.tscn" id="9_t2dka"]
[ext_resource type="PackedScene" uid="uid://c652umiweekt6" path="res://Scenes/envm/scroll.tscn" id="10_vh40y"]
[ext_resource type="Theme" uid="uid://djctowfolotk1" path="res://Assets/theme.tres" id="11_bfuds"]
[ext_resource type="PackedScene" uid="uid://b1q6ao3gypc2w" path="res://Scenes/menus/pause_ui.tscn" id="12_114i5"]
[ext_resource type="PackedScene" uid="uid://dr4x5345mirve" path="res://Scenes/menus/win_ui.tscn" id="13_4eo0a"]
[ext_resource type="PackedScene" uid="uid://c2vk8vnmykm4l" path="res://Scenes/menus/loss_ui.tscn" id="14_cw1lt"]
[ext_resource type="AudioStream" uid="uid://b73lwjx2eehwi" path="res://Sounds/music/Level1.mp3" id="15_5absr"]
[ext_resource type="AudioStream" uid="uid://gdk0nt8or14q" path="res://Sounds/music/Level2.mp3" id="16_oyygf"]
[ext_resource type="AudioStream" uid="uid://jfeovalb12cp" path="res://Sounds/music/Level3.mp3" id="17_rucf6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b0ln5"]
shader = ExtResource("1_mfcgb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j137b"]
texture = ExtResource("3_qdkmt")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_wqw5h"]
vertices = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_botif"]
vertices = PackedVector2Array(8, 8, -8, 8, -7, -8, 8, -8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-6.875, -8, 8, -8, 8, 8, -8, 8)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p14bc"]
texture = ExtResource("4_s0ne8")
0:0/0 = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wqw5h")
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wqw5h")
2:0/0 = 0
2:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wqw5h")
0:1/0 = 0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_botif")
1:1/0 = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wqw5h")
2:1/0 = 0
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wqw5h")
0:2/0 = 0
0:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wqw5h")
1:2/0 = 0
1:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wqw5h")
2:2/0 = 0
2:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_wqw5h")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_th2je"]
texture = ExtResource("5_2yht7")
0:0/0 = 0
0:1/size_in_atlas = Vector2i(2, 1)
0:1/0 = 0
0:2/size_in_atlas = Vector2i(3, 1)
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_rd60n"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_j137b")
sources/2 = SubResource("TileSetAtlasSource_p14bc")
sources/3 = SubResource("TileSetAtlasSource_th2je")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hns6x"]
texture = ExtResource("6_rcq1a")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_pun11"]
physics_layer_0/collision_layer = 256
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_hns6x")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bmn72"]
texture = ExtResource("7_naw7y")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_6aq44"]
physics_layer_0/collision_layer = 512
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_bmn72")

[node name="level_template" type="Node2D"]
material = SubResource("ShaderMaterial_b0ln5")
script = ExtResource("2_wyvwr")

[node name="background" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -6999.01
offset_top = -3186.69
offset_right = -4462.01
offset_bottom = -1749.69
grow_horizontal = 0
scale = Vector2(500, 500)
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.764706, 0.764706, 0.764706, 1)

[node name="tilemaps" type="Node2D" parent="."]

[node name="bricks" type="TileMapLayer" parent="tilemaps" groups=["brick"]]
use_parent_material = true
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_rd60n")

[node name="spikestilemap" type="TileMapLayer" parent="tilemaps" groups=["spikes"]]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_pun11")

[node name="poison" type="TileMapLayer" parent="tilemaps" groups=["poison"]]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_6aq44")

[node name="destructible_walls" type="Node2D" parent="tilemaps"]
use_parent_material = true

[node name="doors" type="Node2D" parent="."]
position = Vector2(1667, 552)

[node name="pickups" type="Node2D" parent="."]

[node name="keys" type="Node2D" parent="pickups"]

[node name="potions" type="Node2D" parent="pickups"]

[node name="medkits" type="Node2D" parent="pickups"]

[node name="scrolls" type="Node2D" parent="pickups"]

[node name="portal_back" parent="." node_paths=PackedStringArray("player1") instance=ExtResource("8_kudv0")]
player1 = NodePath("../player")

[node name="player" parent="." node_paths=PackedStringArray("cam") instance=ExtResource("9_t2dka")]
position = Vector2(158, 204)
cam = NodePath("Camera2D")

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(2, 2)

[node name="scrolls" type="Control" parent="player/Camera2D"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = 1.5708

[node name="scroll" parent="player/Camera2D/scrolls" instance=ExtResource("10_vh40y")]
layout_mode = 1
offset_left = -2.63161
offset_top = -1.57898
offset_right = -7.89482
offset_bottom = -4.73694

[node name="RichTextLabel" type="RichTextLabel" parent="player/Camera2D/scrolls/scroll"]
layout_mode = 0
offset_left = 38.0
offset_top = 129.0
offset_right = 1284.0
offset_bottom = 613.0
theme = ExtResource("11_bfuds")
text = "This is test"

[node name="pause_ui" parent="player/Camera2D" instance=ExtResource("12_114i5")]
visible = false

[node name="win_ui" parent="player/Camera2D" instance=ExtResource("13_4eo0a")]
visible = false

[node name="loss_ui" parent="player/Camera2D" instance=ExtResource("14_cw1lt")]
visible = false

[node name="back1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_5absr")
volume_db = -15.0
bus = &"Music"

[node name="back2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_oyygf")
volume_db = -15.0
bus = &"Music"

[node name="back3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_rucf6")
volume_db = -15.0
bus = &"Music"
